# TD_synthese_image

./: CMakeLists.txt  main.cpp
header/: Bmpfile.h  Color.h  Light.h  Object3d.h  Ray.h  Scene.h  Sphere.h  Vector3d.h  dirLight.h  main.h
src/: Bmpfile.cpp  Color.cpp  Light.cpp  Object3d.cpp  Ray.cpp  Scene.cpp  Sphere.cpp  Vector3d.cpp  dirLight.cpp
